--- a/.circleci/main/jobs/oci/horizon-image-single-arch.yml
+++ b/.circleci/main/jobs/oci/horizon-image-single-arch.yml
@@ -1,7 +1,7 @@
 jobs:
   horizon-image-single-arch:
     executor: base-executor
-    resource_class: medium
+    resource_class: arm.medium
     parameters:
       architecture:
         type: string
