use jar-no-fork

--- a/smoke-test/pom.xml
+++ b/smoke-test/pom.xml
@@ -211,7 +211,7 @@
         <executions>
           <execution>
             <goals>
-              <goal>jar</goal>
+              <goal>jar-no-fork</goal>
             </goals>
           </execution>
         </executions>
