--- a/pom.xml
+++ b/pom.xml
@@ -1271,7 +1271,7 @@
         <executions>
           <execution>
             <goals>
-              <goal>jar</goal>
+              <goal>jar-no-fork</goal>
             </goals>
           </execution>
         </executions>
