--- a/container/spring-extender/pom.xml
+++ b/container/spring-extender/pom.xml
@@ -83,4 +83,13 @@
             <type>pom</type>
         </dependency>
     </dependencies>
+
+    <!-- override a bad repo that's causing issues -->
+    <repositories>
+        <repository>
+            <id>spring-ext</id>
+            <name>OpenNMS Mega-Repository (spring-ext override)</name>
+            <url>https://maven.opennms.org/repository/everything/</url>
+        </repository>
+    </repositories>
 </project>
