--- a/container/features/pom.xml
+++ b/container/features/pom.xml
@@ -174,6 +174,59 @@
                           <feature>eventadmin</feature>
                       </framework>
                       <features>
+                          <!-- core features -->
+                          <feature>bouncycastle</feature>
+                          <feature>bson</feature>
+<!--
+                          <feature>cassandra-driver</feature>
+                          <feature>commons-beanutils</feature>
+                          <feature>commons-cli</feature>
+                          <feature>commons-codec</feature>
+                          <feature>commons-collections</feature>
+                          <feature>commons-compress</feature>
+                          <feature>commons-configuration</feature>
+                          <feature>commons-csv</feature>
+                          <feature>commons-digester</feature>
+                          <feature>commons-exec</feature>
+                          <feature>commons-io</feature>
+                          <feature>commons-jexl</feature>
+                          <feature>commons-jxpath</feature>
+                          <feature>commons-lang</feature>
+                          <feature>commons-lang3</feature>
+                          <feature>commons-net</feature>
+                          <feature>commons-pool2</feature>
+                          <feature>dropwizard-metrics</feature>
+                          <feature>fst</feature>
+                          <feature>guava</feature>
+                          <feature>guava-dependencies</feature>
+                          <feature>guava17</feature>
+                          <feature>guava18</feature>
+                          <feature>guava21</feature>
+                          <feature>guava31</feature>
+                          <feature>jackson-core</feature>
+                          <feature>jackson-dataformat-xml</feature>
+                          <feature>jackson-dataformat-yaml</feature>
+                          <feature>jackson-datatype-jdk8</feature>
+                          <feature>jackson-datatype-json</feature>
+                          <feature>jackson-datatype-jsr310</feature>
+                          <feature>jackson1</feature>
+                          <feature>java-native-access</feature>
+                          <feature>javax.mail</feature>
+                          <feature>javax.servlet</feature>
+                          <feature>javax.validation</feature>
+                          <feature>jetty</feature>
+                          <feature>netty</feature>
+                          <feature>org.json</feature>
+                          <feature>pax-jetty</feature>
+                          <feature>scv-api</feature>
+                          <feature>scv-jceks-impl</feature>
+                          <feature>scv-shell</feature>
+                          <feature>snakeyaml</feature>
+                          <feature>ssh</feature>
+                          <feature>zookeeper-dependencies</feature>
+-->
+
+                          <!-- base API features -->
                           <feature>minion-api-layer</feature>
                           <feature>sentinel-api-layer</feature>
                           <feature>sentinel-timeseries-api</feature>
