--- a/container/features/pom.xml
+++ b/container/features/pom.xml
@@ -177,7 +177,6 @@
                           <!-- core features -->
                           <feature>bouncycastle</feature>
                           <feature>bson</feature>
-<!--
                           <feature>cassandra-driver</feature>
                           <feature>commons-beanutils</feature>
                           <feature>commons-cli</feature>
@@ -224,14 +223,22 @@
                           <feature>snakeyaml</feature>
                           <feature>ssh</feature>
                           <feature>zookeeper-dependencies</feature>
--->
 
                           <!-- base API features -->
+                          <feature>opennms-health</feature>
+                          <feature>opennms-health-api</feature>
+                          <feature>opennms-newts</feature>
+                          <feature>opennms-timeseries-api</feature>
+
+                          <!-- minion features -->
                           <feature>minion-api-layer</feature>
+                          <feature>minion-heartbeat-producer</feature>
+                          <feature>minion-snmp-proxy</feature>
+                          <feature>opennms-dao-minion</feature>
+                          <feature>opennms-trapd-listener</feature>
+
                           <feature>sentinel-api-layer</feature>
                           <feature>sentinel-timeseries-api</feature>
-                          <feature>opennms-timseries-api</feature>
-                          <feature>opennms-newts</feature>
                       </features>
                       <configuration>file:${project.build.directory}/apache-karaf-${karafVersion}/etc/config.properties</configuration>
                   </configuration>
