NMS-15345: avoid a race condition in websocket extensions we do not use

--- a/container/features/pom.xml
+++ b/container/features/pom.xml
@@ -213,6 +213,12 @@
     </dependency>
     <dependency>
       <groupId>org.opennms.container</groupId>
+      <artifactId>noop-jetty-extension</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms.container</groupId>
       <artifactId>spring-extender</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
