NMS-15345: update spifly, get rid of jaspi

--- a/container/karaf/src/main/filtered-resources/etc/overrides.properties
+++ b/container/karaf/src/main/filtered-resources/etc/overrides.properties
@@ -17,6 +17,35 @@ mvn:org.apache.sshd/sshd-scp/${minaSshdVersion}
 mvn:org.apache.sshd/sshd-sftp/${minaSshdVersion}
 mvn:org.codehaus.jettison/jettison/${jettisonVersion}
 
+# Just In Case (tm) make sure Jetty always gets only our vetted version
+mvn:org.eclipse.jetty/jetty-client/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-continuation/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-deploy/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-http/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-io/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-jaas/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-jaspi/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-jmx/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-jndi/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-plus/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-rewrite/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-security/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-server/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-servlet/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-servlets/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-util-ajax/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-util/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-webapp/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty/jetty-xml/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty.websocket/javax-websocket-client-impl/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty.websocket/javax-websocket-server-impl/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty.websocket/websocket-api/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty.websocket/websocket-client/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty.websocket/websocket-common/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty.websocket/websocket-server/${jettyVersion};range=[9.4,10)
+mvn:org.eclipse.jetty.websocket/websocket-servlet/${jettyVersion};range=[9.4,10)
+mvn:org.apache.aries.spifly/org.apache.aries.spifly.dynamic.bundle/${spiflyVersion};range=[1,2)
+
 mvn:org.ow2.asm/asm/${asmVersion};range=[5,10)
 mvn:org.ow2.asm/asm-analysis/${asmVersion};range=[5,10)
 mvn:org.ow2.asm/asm-commons/${asmVersion};range=[5,10)
