--- a/container/shared/src/main/filtered-resources/etc/blacklisted.properties
+++ b/container/shared/src/main/filtered-resources/etc/blacklisted.properties
@@ -10,3 +10,8 @@ ssh/${karafVersion}
 
 # asm-all doesn't exist anymore, use asm/asm-commons/etc.
 org.ow2.asm:asm-all
+
+# pax-web 7.4 doesn't have the jaspi stuff, make sure 7.3 doesn't sneak it in
+mvn:org.apache.geronimo.specs/geronimo-jaspic_1.0_spec
+mvn:org.eclipse.jetty/jetty-jaspi
+mvn:org.apache.geronimo.components/geronimo-jaspi
