NMS-15345: update asm to 9.5

--- a/container/karaf/src/main/filtered-resources/etc/blacklisted.properties
+++ b/container/karaf/src/main/filtered-resources/etc/blacklisted.properties
@@ -13,3 +13,6 @@ http-whiteboard
 pax-http
 pax-http-whiteboard
 pax-war
+
+# asm-all doesn't exist anymore, use asm/asm-commons/etc.
+org.ow2.asm:asm-all
