--- a/container/karaf/src/main/filtered-resources/etc/overrides.properties
+++ b/container/karaf/src/main/filtered-resources/etc/overrides.properties
@@ -16,3 +16,9 @@ mvn:org.apache.sshd/sshd-osgi/${minaSshdVersion}
 mvn:org.apache.sshd/sshd-scp/${minaSshdVersion}
 mvn:org.apache.sshd/sshd-sftp/${minaSshdVersion}
 mvn:org.codehaus.jettison/jettison/${jettisonVersion}
+
+mvn:org.ow2.asm/asm/${asmVersion};range=[5,10)
+mvn:org.ow2.asm/asm-analysis/${asmVersion};range=[5,10)
+mvn:org.ow2.asm/asm-commons/${asmVersion};range=[5,10)
+mvn:org.ow2.asm/asm-tree/${asmVersion};range=[5,10)
+mvn:org.ow2.asm/asm-util/${asmVersion};range=[5,10)
