--- a/container/shared/src/main/filtered-resources/etc/blacklisted.properties
+++ b/container/shared/src/main/filtered-resources/etc/blacklisted.properties
@@ -7,3 +7,6 @@ mvn:org.apache.karaf.features/spring-legacy
 
 # we use the 4.3.9 version instead
 ssh/${karafVersion}
+
+# asm-all doesn't exist anymore, use asm/asm-commons/etc.
+org.ow2.asm:asm-all
