--- a/container/shared/src/main/filtered-resources/etc/overrides.properties
+++ b/container/shared/src/main/filtered-resources/etc/overrides.properties
@@ -44,3 +44,9 @@ mvn:org.eclipse.jetty.websocket/websocket-client/${jettyVersion};range=[9.4,10)
 mvn:org.eclipse.jetty.websocket/websocket-common/${jettyVersion};range=[9.4,10)
 mvn:org.eclipse.jetty.websocket/websocket-server/${jettyVersion};range=[9.4,10)
 mvn:org.eclipse.jetty.websocket/websocket-servlet/${jettyVersion};range=[9.4,10)
+
+mvn:org.ow2.asm/asm/${asmVersion};range=[5,10)
+mvn:org.ow2.asm/asm-analysis/${asmVersion};range=[5,10)
+mvn:org.ow2.asm/asm-commons/${asmVersion};range=[5,10)
+mvn:org.ow2.asm/asm-tree/${asmVersion};range=[5,10)
+mvn:org.ow2.asm/asm-util/${asmVersion};range=[5,10)
