--- a/dependencies/newts/pom.xml
+++ b/dependencies/newts/pom.xml
@@ -63,5 +63,10 @@
       <artifactId>high-scale-lib</artifactId>
       <version>2.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.jnr</groupId>
+      <artifactId>jnr-posix</artifactId>
+      <version>${jnrVersion}</version>
+    </dependency>
   </dependencies>
 </project>
