--- a/container/features/pom.xml
+++ b/container/features/pom.xml
@@ -536,4 +536,13 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+
+  <!-- override a bad repo that's causing issues -->
+  <repositories>
+    <repository>
+      <id>spring-ext</id>
+      <name>OpenNMS Mega-Repository (spring-ext override)</name>
+      <url>https://maven.opennms.org/repository/everything/</url>
+    </repository>
+  </repositories>
 </project>
