--- a/.circleci/main/@main.yml
+++ b/.circleci/main/@main.yml
@@ -6,6 +6,7 @@ orbs:
   jira: circleci/jira@1.3.1
   # path-filtering: circleci/path-filtering@0.1.3
   sign-packages: opennms/sign-packages@2.3.0
+  redhat-openshift: circleci/redhat-openshift@0.2.0
 
 commands:
   #commands:maven/maven.index#
