--- a/features/flows/api/pom.xml
+++ b/features/flows/api/pom.xml
@@ -43,8 +43,8 @@
     </dependency>
     <dependency>
       <groupId>io.searchbox</groupId>
-      <artifactId>jest-common</artifactId>
-      <version>5.3.3</version>
+      <artifactId>jest-complete-osgi</artifactId>
+      <version>${jestVersion}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
