--- a/ui/package.json
+++ b/ui/package.json
@@ -74,6 +74,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.1.3",
     "@types/d3": "^7.4.0",
     "@types/diff": "^5.0.2",
     "@types/leaflet": "^1.7.11",
