--- a/pom.xml
+++ b/pom.xml
@@ -1600,23 +1600,28 @@
     <cassandraVersion>4.17.0</cassandraVersion>
     <cloverVersion>3.2.0</cloverVersion>
     <commonsBeanutilsVersion>1.9.4</commonsBeanutilsVersion>
-    <commonsCliVersion>1.2</commonsCliVersion>
+    <commonsChainVersion>1.2</commonsChainVersion>
+    <commonsCliVersion>1.5.0</commonsCliVersion>
     <commonsCodecVersion>1.16.0</commonsCodecVersion>
     <commonsCollectionsVersion>3.2.2</commonsCollectionsVersion>
     <commonsCollections4Version>4.4</commonsCollections4Version>
     <commonsCompressVersion>1.23.0</commonsCompressVersion>
     <commonsConfigurationVersion>1.6</commonsConfigurationVersion>
     <commonsCsvVersion>1.5</commonsCsvVersion>
+    <commonsDaemonVersion>1.3.4</commonsDaemonVersion>
+    <commonsDbcpVersion>1.4</commonsDbcpVersion>
     <commonsDigesterVersion>2.1</commonsDigesterVersion>
-    <commonsExecVersion>1.2</commonsExecVersion>
-    <commonsJexlVersion>2.1.1</commonsJexlVersion>
-    <commonsJxpathVersion>1.3</commonsJxpathVersion>
+    <commonsExecVersion>1.3</commonsExecVersion>
     <commonsIoVersion>2.12.0</commonsIoVersion>
+    <commonsJexlVersion>2.1.1</commonsJexlVersion>
+    <commonsJexl3Version>3.3</commonsJexl3Version>
+    <commonsJxpathVersion>1.3</commonsJxpathVersion>
     <commonsLangVersion>2.6</commonsLangVersion>
     <commonsLang3Version>3.13.0</commonsLang3Version>
     <commonsMath3Version>3.6.1</commonsMath3Version>
     <commonsNetVersion>3.9.0</commonsNetVersion>
-    <commonsPool2Version>2.4.3</commonsPool2Version>
+    <commonsPoolVersion>1.6</commonsPoolVersion>
+    <commonsPool2Version>2.11.1</commonsPool2Version>
     <commonsValidatorVersion>1.7</commonsValidatorVersion>
     <concurrentTreesVersion>2.6.1</concurrentTreesVersion>
     <cronParserCoreVersion>3.5</cronParserCoreVersion>
@@ -1798,14 +1803,17 @@
     <karafSshdVersion>${karafVersion}.ONMS_1</karafSshdVersion>
 
     <springVersion>4.3.30.RELEASE_1</springVersion>
+    <springOsgiVersion>4.3.30.RELEASE</springOsgiVersion>
     <patchedSpringVersion>4.3.30.RELEASE_1.ONMS.1</patchedSpringVersion>
 
     <!-- ALWAYS change aspectj to match the version referenced in the spring poms -->
     <aspectjVersion>1.9.19_1</aspectjVersion>
     <springWebFlowVersion>2.3.4.RELEASE</springWebFlowVersion>
     <springSecurityVersion>4.2.21.RELEASE_ONMS_3</springSecurityVersion>
+    <springSecurityOsgiVersion>4.2.21.RELEASE</springSecurityOsgiVersion>
     <springLdapVersion>2.3.8.RELEASE</springLdapVersion>
     <springSecurityKerberosVersion>1.0.1.RELEASE_ONMS_3</springSecurityKerberosVersion>
+    <springSecurityKerberosOsgiVersion>1.0.1.RELEASE</springSecurityKerberosOsgiVersion>
 
     <!-- moved here from topology features -->
     <jungVersion>2.0.1</jungVersion>
@@ -3830,12 +3838,12 @@
       <dependency>
         <groupId>commons-chain</groupId>
         <artifactId>commons-chain</artifactId>
-        <version>1.2</version>
+        <version>${commonsChainVersion}</version>
       </dependency>
       <dependency>
         <groupId>commons-cli</groupId>
         <artifactId>commons-cli</artifactId>
-        <version>1.2</version>
+        <version>${commonsCliVersion}</version>
       </dependency>
       <dependency>
         <groupId>commons-codec</groupId>
@@ -3864,9 +3872,14 @@
         </exclusions>
       </dependency>
       <dependency>
+        <groupId>commons-daemon</groupId>
+        <artifactId>commons-daemon</artifactId>
+        <version>${commonsDaemonVersion}</version>
+      </dependency>
+      <dependency>
         <groupId>commons-dbcp</groupId>
         <artifactId>commons-dbcp</artifactId>
-        <version>1.4</version>
+        <version>${commonsDbcpVersion}</version>
       </dependency>
       <dependency>
         <groupId>commons-digester</groupId>
@@ -3882,7 +3895,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-exec</artifactId>
-        <version>1.3</version>
+        <version>${commonsExecVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -4014,7 +4027,7 @@
       <dependency>
         <groupId>commons-pool</groupId>
         <artifactId>commons-pool</artifactId>
-        <version>1.6</version>
+        <version>${commonsPoolVersion}</version>
       </dependency>
       <dependency>
         <groupId>commons-validator</groupId>
@@ -5139,6 +5152,17 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-jexl</artifactId>
         <version>${commonsJexlVersion}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-jexl3</artifactId>
+        <version>${commonsJexl3Version}</version>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
