--- a/features/jest/client/pom.xml
+++ b/features/jest/client/pom.xml
@@ -55,9 +55,8 @@
       <type>pom</type>
     </dependency>
     <dependency>
-      <groupId>io.searchbox</groupId>
+      <groupId>org.opennms.dependencies</groupId>
       <artifactId>jest-complete-osgi</artifactId>
-      <version>${jestVersion}</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
