clean up Jest OSGi dependency and guava transitive dep

--- a/features/flows/api/pom.xml
+++ b/features/flows/api/pom.xml
@@ -42,9 +42,8 @@
       <type>pom</type>
     </dependency>
     <dependency>
-      <groupId>io.searchbox</groupId>
+      <groupId>org.opennms.dependencies</groupId>
       <artifactId>jest-complete-osgi</artifactId>
-      <version>${jestVersion}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
