--- a/features/situation-feedback/elastic/pom.xml
+++ b/features/situation-feedback/elastic/pom.xml
@@ -47,9 +47,8 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>io.searchbox</groupId>
+      <groupId>org.opennms.dependencies</groupId>
       <artifactId>jest-complete-osgi</artifactId>
-      <version>${jestVersion}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
