--- a/container/karaf/src/main/filtered-resources/etc/overrides.properties
+++ b/container/karaf/src/main/filtered-resources/etc/overrides.properties
@@ -46,6 +46,8 @@ mvn:org.eclipse.jetty.websocket/websocket-server/${jettyVersion};range=[9.4,10)
 mvn:org.eclipse.jetty.websocket/websocket-servlet/${jettyVersion};range=[9.4,10)
 mvn:org.apache.aries.spifly/org.apache.aries.spifly.dynamic.bundle/${spiflyVersion};range=[1,2)
 
+mvn:org.ops4j.pax.web/pax-web-features/${paxWebVersion}/xml/features;range=[7,9)
+
 mvn:org.ow2.asm/asm/${asmVersion};range=[5,10)
 mvn:org.ow2.asm/asm-analysis/${asmVersion};range=[5,10)
 mvn:org.ow2.asm/asm-commons/${asmVersion};range=[5,10)
