--- a/pom.xml
+++ b/pom.xml
@@ -1664,7 +1664,6 @@
     <jacksonVersion>1.9.14-atlassian-6</jacksonVersion>
     <jackson2Version>2.14.2</jackson2Version>
     <snakeyamlVersion>1.33</snakeyamlVersion>
-    <spiflyVersion>1.3.6</spiflyVersion>
     <jacocoVersion>0.8.9</jacocoVersion>
     <jasperreportsVersion>6.3.0</jasperreportsVersion>
     <jasperreportsMavenPluginVersion>1.0-beta-4-OPENNMS-20160912-1</jasperreportsMavenPluginVersion>
@@ -1682,8 +1681,8 @@
     <jcommonVersion>1.0.24</jcommonVersion>
     <jdom2Version>2.0.6.1</jdom2Version>
     <jettisonVersion>1.4.1</jettisonVersion>
-    <jettyVersion>9.4.51.v20230217</jettyVersion>
-    <jettyOsgiVersion>9.4.51</jettyOsgiVersion>
+    <jettyVersion>9.4.52.v20230823</jettyVersion>
+    <jettyOsgiVersion>9.4.52</jettyOsgiVersion>
     <jestVersion>5.3.4</jestVersion>
     <jestGsonVersion>${gsonVersion}</jestGsonVersion>
     <jfreechartVersion>1.5.4</jfreechartVersion>
@@ -1734,7 +1733,7 @@
     <paxExamVersion>4.13.1</paxExamVersion>
     <paxLoggingVersion>2.2.0</paxLoggingVersion>
     <paxSwissboxVersion>1.8.3</paxSwissboxVersion>
-    <paxWebVersion>8.0.15</paxWebVersion>
+    <paxWebVersion>8.0.21</paxWebVersion>
     <pktsVersion>3.0.10</pktsVersion>
     <protobufVersion>3.22.5</protobufVersion>
     <postgresqlVersion>42.5.4</postgresqlVersion>
@@ -1763,6 +1762,7 @@
     <scalaLoggingVersion>3.9.5</scalaLoggingVersion>
     <scalaVersion>2.13</scalaVersion>
     <servletApiVersion>3.1.0</servletApiVersion>
+    <servletApi4Version>4.0.4</servletApi4Version>
     <slf4jVersion>1.7.36</slf4jVersion>
     <smackVersion>4.0.6</smackVersion>
     <snappyJavaVersion>1.1.10.3</snappyJavaVersion>
