NMS-15759: Allow metadata for notification credentials

--- a/opennms-services/pom.xml
+++ b/opennms-services/pom.xml
@@ -513,5 +513,11 @@
           <artifactId>resilience4j-bulkhead</artifactId>
           <version>${resilience4jVersion}</version>
       </dependency>
+    <dependency>
+      <groupId>org.opennms.features.scv</groupId>
+      <artifactId>org.opennms.features.scv.jceks-impl</artifactId>
+      <version>${project.version}</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
