--- a/features/distributed/kv-store/blob/cassandra/pom.xml
+++ b/features/distributed/kv-store/blob/cassandra/pom.xml
@@ -20,7 +20,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-RequiredExecutionEnvironment>JavaSE-1.8</Bundle-RequiredExecutionEnvironment>
-                        <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Version>${project.version}</Bundle-Version>
                         <Import-Package>
                             com.google.common.*;version="${guavaOsgiVersion}",
