NMS-15759: Reverting some changes

--- a/opennms-ackd/pom.xml
+++ b/opennms-ackd/pom.xml
@@ -118,5 +118,9 @@
       <artifactId>postgresql</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.opennms.core.mate</groupId>
+      <artifactId>org.opennms.core.mate.model</artifactId>
+    </dependency>
   </dependencies>
 </project>
