--- a/opennms-javamail/opennms-javamail-api/src/test/resources/etc/javamail-configuration.properties
+++ b/opennms-javamail/opennms-javamail-api/src/test/resources/etc/javamail-configuration.properties
@@ -30,8 +30,8 @@ org.opennms.core.utils.useJMTA=false
 # These properties define the Mail authentication.
 #
 #org.opennms.core.utils.authenticate=false
-org.opennms.core.utils.authenticateUser=${scv:javamailer:username|foo}
-org.opennms.core.utils.authenticatePassword=${scv:javamailer:password|foo}
+org.opennms.core.utils.authenticateUser=${scv:javamailer:username|ABC}
+org.opennms.core.utils.authenticatePassword=${scv:javamailer:password|DEF}
 #org.opennms.core.utils.starttls.enable=false
 
 #
