NMS-16070: update dependencies and validate the alarm history feature

--- a/container/features/pom.xml
+++ b/container/features/pom.xml
@@ -225,6 +225,7 @@
                           <feature>zookeeper-dependencies</feature>
 
                           <!-- base API features -->
+                          <feature>opennms-alarm-history-elastic</feature>
                           <feature>opennms-health</feature>
                           <feature>opennms-health-api</feature>
                           <feature>opennms-newts</feature>
