--- a/opennms-base-assembly/pom.xml
+++ b/opennms-base-assembly/pom.xml
@@ -1186,4 +1186,14 @@
     </dependency>
   </dependencies>
 
+  <repositories>
+    <repository>
+      <id>jasperreports</id>
+      <name>OpenNMS Mega-Repository (jasperreports override)</name>
+      <url>https://maven.opennms.org/repository/everything/</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 </project>
