NMS-16104: make sure OIA exports match OIA jars

--- a/container/karaf/src/main/filtered-resources/etc/custom.properties
+++ b/container/karaf/src/main/filtered-resources/etc/custom.properties
@@ -1283,7 +1283,38 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.opennms.features.status.api.node;version=${opennms.osgi.version},\
         org.opennms.features.status.api.node.strategy;version=${opennms.osgi.version},\
         org.opennms.features.timeformat.api;version=${opennms.osgi.version},\
-        org.opennms.integration.api.v1.timeseries;version=${opennmsApiVersionOsgi},\
+        org.opennms.integration.api.v1.alarms;uses:="org.opennms.integration.api.v1.model";version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.annotations;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.collectors;uses:="org.opennms.integration.api.v1.collectors.resource";version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.collectors.resource;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.config.collector;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.config.datacollection;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.config.datacollection.graphs;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.config.events;uses:="org.opennms.integration.api.v1.model";version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.config.poller;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.config.requisition;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.config.syslog;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.config.thresholding;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.coordination;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.dao;uses:="org.opennms.integration.api.v1.graph,org.opennms.integration.api.v1.model,org.opennms.integration.api.v1.ticketing";version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.detectors;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.distributed;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.events;uses:="org.opennms.integration.api.v1.model";version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.feedback;uses:="org.opennms.integration.api.v1.model";version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.flows;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.graph;uses:="org.opennms.integration.api.v1.graph.configuration";version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.graph.configuration;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.graph.status;uses:="org.opennms.integration.api.v1.graph,org.opennms.integration.api.v1.model";version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.health;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.model;uses:="org.opennms.integration.api.v1.config.events,org.opennms.integration.api.v1.ticketing";version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.pollers;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.requisition;uses:="org.opennms.integration.api.v1.config.requisition";version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.runtime;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.scv;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.ticketing;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.timeseries;version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.topology;uses:="org.opennms.integration.api.v1.model";version="${opennmsApiVersionOsgi}",\
+        org.opennms.integration.api.v1.ui;version="${opennmsApiVersionOsgi}",\
         org.opennms.netmgt.alarmd.api;version=${opennms.osgi.version},\
         org.opennms.netmgt.alarmd.api.support;version=${opennms.osgi.version},\
         org.opennms.netmgt.enlinkd.model;version=${opennms.osgi.version},\
