pass as a joption instead

--- a/pom.xml
+++ b/pom.xml
@@ -616,10 +616,12 @@
           <!-- <sourcepath>${project.basedir}/src/main;${project.build.directory}/generated-sources;${project.build.directory}/generated-sources/annotations;${project.build.directory}/generated-sources/cxf;${project.build.directory}/generated-sources/groovy-stubs;${project.build.directory}/generated-test-sources/test-annotations</sourcepath> -->
           <!-- this will require touching a _lot_ of files <doclint>all</doclint> -->
           <doclint>none</doclint>
+          <additionalJOptions>
+            <additionalJOption>-J-Djdk.util.zip.disableZip64ExtraFieldValidation=true</additionalJOption>
+          </additionalJOptions>
           <additionalOptions>
             <!-- for GrafanaPanelDatasource -->
             <option>--add-exports</option> <option>jdk.internal.opt/jdk.internal.joptsimple.internal=ALL-UNNAMED</option>
-            <option>-Djdk.util.zip.disableZip64ExtraFieldValidation=true</option>
           </additionalOptions>
           <tags>
             <tag>
